# ogremeshy

./: .hgtags  CMakeLists.old.1.8.txt  CMakeLists.txt  COMPILING.txt  README.md
CMake/: Install.cmake
CMake/Dependencies/: OGRE.cmake  wxWidgets.cmake
CMake/Templates/: Plugins.cfg.in
include/: CmdSettings.h  Constants.h
include/Core/: AnimationPanel.h  GridSettingsImpl.h  MovableText.h  ShaderGeneratorTechniqueResolverListener.h  wxOgreMeshViewerMainFrame.h  wxOgreMeshViewerMainFrameImpl.h  wxOgreRenderWindow.h  wxOgreRenderWindowListener.h
include/Core/Panels/: AnimPosePanel.h  LightsPanel.h
scripts/: wxOgreMeshViewer.sln  wxOgreMeshViewer.vcproj
scripts/NSIS/: FileAssociation.nsh  NSIS.InstallOptions.ini  OgreMeshy.nsi
scripts/Resources/: OgreIcon.xcf  Resource.rc  copyresources.bat  copyresources.sh
scripts/Resources/Blender/: Axis.blend  Axis.material
scripts/Resources/Blender/Bones/: BoneGlobe.blend  BoneGlobe.blend1  BoneMesh.material  BoneTip.blend  BoneTip.blend1  BoneTip.mesh
scripts/Resources/Blender/Icons/: BBoxIcon.blend  BoneIcon.blend  BoneIcon.blend1  WireframeIcon.blend
scripts/Resources/Fonts/: Default.fontdef
scripts/Resources/Other/: Grid.material
scripts/Resources/RTShaderLib/Cg/: FFPLib_Texturing.cg
scripts/Resources/RTShaderLib/GLSL/: FFPLib_Texturing.glsl
scripts/Resources/RTShaderLib/GLSLES/: FFPLib_Texturing.glsles
scripts/Resources/RTShaderLib/HLSL/: FFPLib_Texturing.hlsl  SGXLib_LayeredBlending.hlsl.bak  SGXLib_NormalMapLighting.hlsl.bak
scripts/wxFormBuilder/: OgreQuicky.fbp  wxOgreMeshViewer.fbp
src/: main.cpp
src/Core/: AnimationPanel.cpp  GridSettingsImpl.cpp  MovableText.cpp  ShaderGeneratorTechniqueResolverListener.cpp  wxOgreMeshViewerMainFrame.cpp  wxOgreMeshViewerMainFrameImpl.cpp  wxOgreRenderWindow.cpp
src/Core/Panels/: AnimPosePanel.cpp  LightsPanel.cpp
